# pyglet-asteroids

./: Makefile  pyproject.toml  readme.md
src/v1/: asteroids.py
src/v1/game/: asteroid.py  bullet.py  load.py  physical_object.py  player.py  resources.py  util.py
