[tool.poetry]
name = "flappin"
version = "0.1.0"
description = "Flapping bird game"
authors = ["Francisco Casado <hola@franciscocasado.cl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyglet = "^2.0.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "./src"